fix z-index issues + add responsive projects component

--- a/src/Components/LanguageSelect/styles.scss
+++ b/src/Components/LanguageSelect/styles.scss
@@ -4,7 +4,7 @@
 @import 'src/_fonts.scss';
 
 .LangugageSelectContainer {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: -162px;
   right: -110px;
