--- a/src/Components/NavBar/style.scss
+++ b/src/Components/NavBar/style.scss
@@ -77,7 +77,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 3;
     &-AllwaysVisibleMenuContainer {
       height: 50px;
       padding: 5px 20px;
