--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -1,1 +1,1 @@
-$mainBorderRadius: 8px;
+$main-border-radius: 8px;
